# sql-unit-test-generator

./: .gitignore  README.md  pyproject.toml
data/: seed_metric_loans.csv  test_metric_loans.csv
notebooks/: faker_dataset_generator.ipynb  generate_tests.ipynb  sqlmesh_yml_generator.ipynb  test_data_gen.ipynb
sql/: test_metric_loans.sql  test_metric_loans_model.sql
src/: generate_tests.py  test_generator.py
tests/: test_metric_loans.yaml  test_metric_loans_model.yaml
